--- a/src/main/resources/META-INF/native-image/resource-config.json
+++ b/src/main/resources/META-INF/native-image/resource-config.json
@@ -5,8 +5,14 @@
       "pattern":"\\Qnet/rubygrapefruit/platform/linux-aarch64/libnative-platform.so\\E"
     }, 
     {
+      "pattern":"\\Qnet/rubygrapefruit/platform/linux-aarch64-ncurses6/libnative-platform-curses.so\\E"
+    },
+    {
       "pattern":"\\Qnet/rubygrapefruit/platform/linux-amd64/libnative-platform.so\\E"
-    }, 
+    },
+    {
+      "pattern":"\\Qnet/rubygrapefruit/platform/linux-amd64-ncurses6/libnative-platform-curses.so\\E"
+    },
     {
       "pattern":"\\Qnet/rubygrapefruit/platform/osx-aarch64/libnative-platform-curses.dylib\\E"
     }, 
