--- a/pom.xml
+++ b/pom.xml
@@ -243,7 +243,13 @@
                         <buildArg>-R:MaximumHeapSizePercent=95</buildArg>
                         <!-- G1 GC -->
                         <!-- buildArg>- -gc=G1</buildArg>
-                        <buildArg>-R:MaxRAMPercentage=95.0</buildArg -->
+                        <buildArg>-R:MaxRAMPercentage=95.0</buildArg>
+                        <buildArg>-R:MaximumYoungGenerationSizePercent=80</buildArg>
+                        <buildArg>-H:-UseCompressedReferences</buildArg -->
+
+                        <!-- Profile Guided Optimization, GraalVM EE only -->
+                        <!-- buildArg>- -pgo-instrument</buildArg>
+                        <buildArg>- -pgo=../default.iprof</buildArg -->
 
                         <!-- buildArg>-XX:+UnlockExperimentalVMOptions</buildArg>
                         <buildArg>-XX:G1MaxNewSizePercent=80</buildArg -->
