--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
         <dependency>
             <groupId>com.oracle.database.ha</groupId>
             <artifactId>ons</artifactId>
-            <version>${oracle.jdbc.version}</version>
+            <version>19.15.0.0.1</version>
         </dependency>
         <!--dependency>
             <groupId>com.oracle.</groupId>
@@ -238,19 +238,22 @@
                         <buildArg>--no-fallback</buildArg>
                         <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                         <buildArg>-H:+AddAllCharsets</buildArg>
+                        <buildArg>-Doracle.jdbc.fanEnabled=false</buildArg>
                         <!-- Serial GC -->
-                        <buildArg>--gc=serial</buildArg>
-                        <buildArg>-R:MaximumHeapSizePercent=95</buildArg>
+                        <!-- buildArg>- -gc=serial</buildArg>
+                        <buildArg>-R:MaximumHeapSizePercent=95</buildArg -->
+
                         <!-- G1 GC -->
-                        <!-- buildArg>- -gc=G1</buildArg>
-                        <buildArg>-R:MaxRAMPercentage=95.0</buildArg>
-                        <buildArg>-R:MaximumYoungGenerationSizePercent=80</buildArg>
+                        <buildArg>--gc=G1</buildArg>
+                        <buildArg>-H:MaxRAMPercentage=95.0</buildArg>
+                        <buildArg>-H:MaximumYoungGenerationSizePercent=80.0</buildArg>
                         <buildArg>-H:G1HeapRegionSize=32M</buildArg>
-                        <buildArg>-H:-UseCompressedReferences</buildArg -->
+                        <buildArg>-H:-UseCompressedReferences</buildArg>
+                        <buildArg>-H:+NativeArchitecture</buildArg>
 
                         <!-- Profile Guided Optimization, GraalVM EE only -->
-                        <!-- buildArg>- -pgo-instrument</buildArg>
-                        <buildArg>- -pgo=../default.iprof</buildArg -->
+                        <!-- buildArg>- -pgo-instrument</buildArg -->
+                        <!-- buildArg>- -pgo=../pgo_3_nativearchitecture.iprof</buildArg -->
 
                         <!-- buildArg>-XX:+UnlockExperimentalVMOptions</buildArg>
                         <buildArg>-XX:G1MaxNewSizePercent=80</buildArg -->
