--- a/pom.xml
+++ b/pom.xml
@@ -246,7 +246,7 @@
                         <!-- G1 GC -->
                         <buildArg>--gc=G1</buildArg>
                         <buildArg>-R:MaxRAMPercentage=95.0</buildArg>
-                        <buildArg>-R:MaximumYoungGenerationSizePercent=80.0</buildArg>
+                        <buildArg>-R:MaximumYoungGenerationSizePercent=80</buildArg>
                         <buildArg>-H:G1HeapRegionSize=32M</buildArg>
                         <buildArg>-H:-UseCompressedReferences</buildArg>
                         <buildArg>-H:+NativeArchitecture</buildArg>
