--- a/src/main/resources/META-INF/native-image/resource-config.json
+++ b/src/main/resources/META-INF/native-image/resource-config.json
@@ -68,6 +68,10 @@
       ]
     }, 
     {
+      "name":"oracle.net.mesg.Message",
+      "locales":[""]
+    }, 
+    {
       "name":"oracle.ucp.util.UCPMessages",
       "locales":[
         "", 
