--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,8 @@
         <!-- dependency>
             <groupId>com.oracle.database.ha</groupId>
             <artifactId>ons</artifactId>
-            <version>19.15.0.0.1</version>
+            <version>${oracle.jdbc.version}</version>
+            <!- - version>19.15.0.0.1</version - ->
         </dependency -->
         <!--dependency>
             <groupId>com.oracle.</groupId>
@@ -206,6 +207,29 @@
                 <version>3.8.1</version>
             </plugin>
             <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.oracle.mongo2ora.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.graalvm.buildtools</groupId>
                 <artifactId>native-maven-plugin</artifactId>
                 <version>0.9.12</version> <!-- see: https://graalvm.github.io/native-build-tools/latest/index.html -->
@@ -239,6 +263,8 @@
                         <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                         <buildArg>-H:+AddAllCharsets</buildArg>
                         <buildArg>-Doracle.jdbc.fanEnabled=false</buildArg>
+                        <buildArg>-Dnetworkaddress.cache.ttl=0</buildArg>
+
                         <!-- Serial GC -->
                         <!-- buildArg>- -gc=serial</buildArg>
                         <buildArg>-R:MaximumHeapSizePercent=95</buildArg -->
