--- a/src/main/resources/META-INF/native-image/resource-config.json
+++ b/src/main/resources/META-INF/native-image/resource-config.json
@@ -69,7 +69,7 @@
     }, 
     {
       "name":"oracle.net.mesg.Message",
-      "locales":[""]
+      "locales":["und"]
     }, 
     {
       "name":"oracle.ucp.util.UCPMessages",
