GraalVM native image reflection config

--- a/src/main/resources/META-INF/native-image/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/reflect-config.json
@@ -779,7 +779,13 @@
 },
 {
   "name":"oracle.jdbc.OraclePreparedStatement",
-  "queryAllDeclaredMethods":true
+  "queryAllDeclaredMethods":true,
+  "queriedMethods":[
+    {"name":"getReturnResultSet","parameterTypes":[] },
+    {"name":"registerReturnParameter","parameterTypes":["int","int"] },
+    {"name":"setBytesForBlob","parameterTypes":["int","byte[]"] },
+    {"name":"setStringForClob","parameterTypes":["int","java.lang.String"] }
+  ]
 },
 {
   "name":"oracle.jdbc.OracleRef",
@@ -807,7 +813,8 @@
 },
 {
   "name":"oracle.jdbc.OracleStatement",
-  "queryAllDeclaredMethods":true
+  "queryAllDeclaredMethods":true,
+  "queriedMethods":[{"name":"setLobPrefetchSize","parameterTypes":["int"] }]
 },
 {
   "name":"oracle.jdbc.OracleStruct",
