Memoptimize for write on ADB-S

--- a/pom.xml
+++ b/pom.xml
@@ -139,8 +139,13 @@
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>rsi</artifactId>
-            <version>${oracle.jdbc.version}</version>
+            <version>21.4.2.0</version>
         </dependency>
+        <!-- dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>rsi</artifactId>
+            <version>${oracle.jdbc.version}</version>
+        </dependency -->
         <!-- dependency>
             <groupId>com.oracle.database.ha</groupId>
             <artifactId>ons</artifactId>
