--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -1,8 +1,8 @@
-handlers= java.util.logging.FileHandler
-.level= ERROR
-java.util.logging.FileHandler.level = ERROR
-java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
+handlers=java.util.logging.FileHandler
+.level=ERROR
+java.util.logging.FileHandler.level=ERROR
+java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.SimpleFormatter.format=[%1$tF %1$tT] [%4$-7s] %5$s %n
-java.util.logging.SimpleFormatter.pattern=rsi.log
+java.util.logging.FileHandler.pattern=rsi.log
 
-oracle.rsi.logging = DEBUG
+oracle.rsi.logging=FINEST
