minor bug fixes, reporting

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,11 +1,21 @@
 # Define the root logger with appender file
 log4j.rootLogger = INFO, FILE
+#, ROLLINGFILE
 
 # Define the file appender
+#log4j.appender.ROLLINGFILE = org.apache.log4j.DailyRollingFileAppender
+##log4j.appender.ROLLINGFILE.Policy=org.apache.log4j.rolling.TimeBasedRollingPolicy
+#log4j.appender.ROLLINGFILE.File = mongo2ora.log
+#log4j.appender.ROLLINGFILE.DatePattern='.'yyyy-MM-dd-HH-mm-ss
+#log4j.appender.ROLLINGFILE.Append = false
+
 log4j.appender.FILE = org.apache.log4j.FileAppender
 log4j.appender.FILE.File = mongo2ora.log
 
 # Define the layout for file appender
 log4j.appender.FILE.layout = org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.conversionPattern = %-5p %d{MM-dd HH:mm:ss,SSS} [%-20c]: %m%n
+
+#log4j.appender.ROLLINGFILE.layout = org.apache.log4j.PatternLayout
+#log4j.appender.ROLLINGFILE.layout.conversionPattern = %-5p %d{MM-dd HH:mm:ss,SSS} [%-20c]: %m%n
 
