--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,8 @@
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ucp</artifactId>
-            <version>23.3.0.23.11</version>
+            <!-- version>23.3.0.23.11</version -->
+            <version>23.3.0.11.12</version>
             <!-- version>${oracle.jdbc.version}</version -->
 <!--            <version>23.4.0.0</version>-->
         </dependency>
