--- a/pom.xml
+++ b/pom.xml
@@ -319,9 +319,9 @@
 			<buildArg>-H:Debug=1</buildArg -->
 
                         <!-- Profile Guided Optimization, GraalVM EE only -->
-                        <!-- buildArg>- -pgo-instrument</buildArg -->
-			<!-- buildArg>- -pgo=../3newintrinsicsprofile.iprof</buildArg -->
-			<!-- buildArg>- -pgo=${project.basedir}/profile-22.3.0.iprof</ibuildArg -->
+                        <buildArg>--pgo-instrument</buildArg>
+			            <buildArg>--pgo=../mongo2ora.iprof</buildArg>
+			<!-- buildArg>- -pgo=${project.basedir}/mongo2ora.iprof</ibuildArg -->
 
                         <!-- buildArg>-XX:+UnlockExperimentalVMOptions</buildArg>
                         <buildArg>-XX:G1MaxNewSizePercent=80</buildArg -->
