--- a/pom.xml
+++ b/pom.xml
@@ -306,13 +306,11 @@
                         <!-- buildArg>- -gc=serial</buildArg>
                         <buildArg>-R:MaximumHeapSizePercent=95</buildArg -->
 
-                        <buildArg>-O2</buildArg>
-
                         <!-- G1 GC -->
                         <buildArg>--gc=G1</buildArg>
                         <buildArg>-H:G1HeapRegionSize=32M</buildArg>
                         <buildArg>-H:-UseCompressedReferences</buildArg>
-                        <buildArg>-H:+NativeArchitecture</buildArg>
+                        <!-- buildArg>-H:+NativeArchitecture</buildArg -->
                         <buildArg>-H:+OptStringConcat</buildArg>
                         <buildArg>-H:-OutlineStringBuilderAppends</buildArg>
 			
